examples/test/testpolicy903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy903
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key40: value34
      key4: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value15
          key48: value11
      podSelector:
        matchLabels:
          key22: value41
          key39: value35
          key20: value17
